@@ -931,3 +931,4 @@ Jan 16, 2001
  - added OMNETPP_VERSION to defs.h (0x0200 for OMNeT++ 2.0)
 Jan 24, 2001
  - bugfix: cArray and cBag didn't work properly after clear()
+ - bugfix: makefile and makefile.vc didn't handle PVM properly
